# filigree

./: .filigree.conf  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  biome.json  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
.filigree/scanners/: claude-code.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: MIGRATION.md  README.md  SCHEMA_MIGRATIONS.md  UPGRADING.md  agent-integration.md  api-reference.md  architecture.md  cli.md  file-traceability.md  getting-started.md  mcp.md  workflows.md
docs/arch-analysis-2026-03-02-1737/: 00-coordination.md  01-discovery-findings.md  02-subsystem-catalog.md  03-diagrams.md  04-final-report.md
docs/architecture/: templates.md
docs/concepts/: architecture_scanner.md  architecture_scanner_synthesis.md
docs/examples/: cli_scripting.sh  custom_workflow.py  multi_agent.py  plan_hierarchy.py
docs/federation/: contracts.md  registry-backend-launch-runbook.md
docs/plans/: 2026-02-11-keel-current-requirements.md  2026-02-11-phase-1a-template-engine.md  2026-02-11-phase-1b-integration.md  2026-02-11-phase-1c-behavior-change.md  2026-02-11-workflow-templates-design.md  2026-02-11-workflow-templates-implementation.md  2026-02-11-workflow-templates-implementation.review.json  2026-02-11-workflow-templates-requirements.md  2026-02-14-cli-parity-design.md  2026-02-14-cli-parity-implementation.md  2026-02-14-dogfood-fixes-design.md  2026-02-14-dogfood-fixes-implementation.md  2026-02-14-pattern2-dx-design.md  2026-02-14-pattern2-dx-implementation.md  2026-02-15-rebar-rename-and-release-design.md  2026-02-15-rebar-rename-and-release-impl.md  2026-02-16-dashboard-contextual-help.md  2026-02-16-dashboard-implementation.md  2026-02-16-dashboard-phase3.md  2026-02-16-dashboard-requirements.md  2026-02-20-dashboard-ux-improvements-design.md  2026-02-20-dashboard-ux-improvements.md  2026-02-20-deep-teal-theme-design.md  2026-02-20-deep-teal-theme.md  2026-02-21-dashboard-modularization-design.md  2026-02-21-dashboard-modularization.md  2026-02-21-files-health-dashboard-design.md  2026-02-21-files-health-dashboard.md  2026-02-22-files-findings-bugfixes.md  2026-02-22-graph-tab-v2-design.md  2026-02-22-graph-tab-v2-readiness.md  2026-02-22-graph-tab-v2-rollout.md  2026-02-22-mcp-scan-trigger-design.md  2026-02-22-mcp-scan-trigger.md  2026-02-22-server-ethereal-modes.md  2026-02-23-file-traceability-readiness.md  2026-02-23-mcp-file-association-contract.md  2026-02-24-module-architecture-design.md  2026-02-24-module-architecture.md  2026-02-24-server-lifecycle-bugs.md  (+56 more)
scripts/: claude_bug_hunt.py  codex_bug_hunt.py  scan_utils.py
scripts/scanners/: claude.toml.example  codex.toml.example
src/filigree/: __init__.py  __main__.py  analytics.py  cli.py  cli_common.py  core.py  dashboard.py  db_annotations.py  db_base.py  db_entity_associations.py  db_events.py  db_files.py  db_issues.py  db_meta.py  db_observations.py  db_planning.py  db_scans.py  db_schema.py  db_workflow.py  ephemeral.py  hooks.py  install.py  issue_payloads.py  logging.py  mcp_server.py  migrate.py  migrations.py  models.py  paths.py  registry.py  registry_errors.py  scanner_callback.py  scanner_runtime.py  scanners.py  server.py  summary.py  templates.py  templates_data.py  validation.py
tests/: _db_factory.py  _seeds.py  conftest.py  test_analytics.py  test_analytics_templates_fixes.py  test_backward_compat.py  test_cli.py  test_codex_bug_hunt.py  test_compose.py  test_config_packs.py  test_core.py  test_core_gaps.py  test_core_logic_fixes.py  test_dashboard.py  test_doctor.py  test_e2e_workflows.py  test_entity_associations_federation.py  test_ephemeral.py  test_error_envelope_contract.py  test_error_handling_fixes.py  test_files.py  test_filigreedb_templates.py  test_frontend_xss_regressions.py  test_hooks.py  test_install.py  test_logging.py  test_mcp.py  test_migrate.py  test_migration_v5.py  test_migration_v6.py  test_migrations.py  test_minor_fixes.py  test_module_split.py  test_peripheral_fixes.py  test_registry.py  test_scan_utils.py  test_scanners.py  test_schema_mismatch.py  test_server.py  test_summary.py  (+6 more)
tests/_fakes/: clarion_http.py  registry.py
tests/analytics/: test_analytics.py  test_summary.py
tests/api/: conftest.py  test_api.py  test_api_validation_bugs.py  test_boundary_validation.py  test_dashboard_validation_cluster.py  test_entity_associations.py  test_envelope_types.py  test_error_format.py  test_files_api.py  test_files_dashboard.py  test_graph_api.py  test_multi_project.py  test_registry_backend_integration.py  test_releases_api.py  test_scanner_tools.py
tests/cli/: conftest.py  test_admin_commands.py  test_aliases.py  test_annotations_commands.py  test_boundary_validation.py  test_commands.py  test_compose_commands.py  test_error_handling.py  test_files_commands.py  test_issue_commands.py  test_observations_commands.py  test_query_commands.py  test_response_detail.py  test_scanners_commands.py  test_server.py  test_workflow_commands.py
tests/core/: conftest.py  test_annotations.py  test_backward_compat.py  test_batch.py  test_category_type_aware.py  test_claim_conflict_error.py  test_concurrency_guardrails.py  test_config.py  test_crud.py  test_dependencies.py  test_entity_associations.py  test_files.py  test_finding_triage.py  test_get_stale_claims_sql_filter.py  test_immediate_tx_decorator.py  test_label_discovery.py  test_label_query.py  test_observations.py  test_plans.py  test_project_anchor.py  test_query.py  test_record_event_visibility.py  test_registry_backend_matrix.py  test_releases.py  test_scans.py  test_schema.py  test_start_work_held_writer_window.py  test_undo.py  test_update_issue_cas.py  test_workflow_behavior.py
tests/dashboard_routes/: test_common_parsers.py
tests/docs/: test_surface_docs.py
tests/generations/: test_loom_adapters.py
(+199 files in other folders)
